Updating to using latest Javascript syntax
Removing jquery & underscore. Using Lodash only for throttling

Removing modifications to chrome sync property values as they have no effect.

Adding the ability to see how much storage has been taken.

Updating version number

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,6 +1,6 @@
 <!--  Copyright 2012 Jared M. Scott !-->
 <!--
- This work is licensed under the Creative Commons Attribution 3.0 Unported License.
+ This work is licensed under the Creative Commons Attribution 3.0 Un-ported License.
   To view a copy of this license, visit http://creativecommons.org/licenses/by/3.0/
   or send a letter to
       Creative Commons,
@@ -8,17 +8,25 @@
       Mountain View, California, 94041, USA.
 !-->
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>Simple Text Sync</title>
     <link href="/css/main.css" type="text/css" media="screen" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-33436156-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-33436156-1');
+    </script>
 </head>
 <body>
     <textarea id="text"></textarea>
+    <div id="info"><span id="num-chars"></span> / 8192</div>
 
-    <!-- JavaScript and HTML must be in separate files for security. -->
-    <script src="/js/vendor/jquery-1.7.2.js"></script>
-    <script src="/js/vendor/underscore-1.3.3.js"></script>
+    <script src="/js/vendor/lodash-4.17.15.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
