Upgrade the manifest.json file to manifest v3
Standardize the copyright notices
Update to node v20 and switch to using npm from yarn

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,12 +1,12 @@
-<!--  Copyright 2012-2020 Jared M. Scott !-->
 <!--
- This work is licensed under the Creative Commons Attribution 3.0 Un-ported License.
-  To view a copy of this license, visit http://creativecommons.org/licenses/by/3.0/
-  or send a letter to
-      Creative Commons,
-      444 Castro Street, Suite 900,
-      Mountain View, California, 94041, USA.
-!-->
+  ~ Copyright (c) 2023 Jared M. Scott. This work is licensed under the Creative
+  ~ Commons Attribution 3.0 Un-ported License. To view a copy of this license,
+  ~ visit http://creativecommons.org/licenses/by/3.0/ or send a letter to
+  ~         Creative Commons,
+  ~         444 Castro Street, Suite 900,
+  ~         Mountain View, California, 94041, USA.
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,22 +17,6 @@
       media="screen"
       rel="stylesheet"
     />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-33436156-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-
-      gtag("js", new Date());
-
-      gtag("config", "UA-33436156-1");
-    </script>
   </head>
   <body>
     <div id="info"><span id="num-chars"></span> / 8192</div>
