- Migrate to Typescript - Enable Webpack and building via Webpack - Remove Dependency on lodash

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,7 @@
     <!--suppress HtmlFormInputWithoutLabel -->
     <textarea id="text"></textarea>
 
-    <script src="/js/vendor/lodash-4.17.15.js"></script>
-    <script src="/js/main.js"></script>
+    <!--suppress HtmlUnknownTarget -->
+    <script src="/main.bundle.js"></script>
   </body>
 </html>
