- Cleanup some usage of magic constants

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div id="info"><span id="num-chars"></span> / 8192</div>
+    <div id="info"><span id="num-chars">0</span> / 8192 Bytes</div>
     <!--suppress HtmlFormInputWithoutLabel -->
     <textarea id="text"></textarea>
 
