--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,9 @@
   </head>
   <body>
     <div id="info">
-      <span id="num-chars">0</span> / 8192 Bytes
+      <span id="num-chars">0</span>
+      <span id="usage-max">/ 8192 Bytes</span>
+      <span aria-hidden="true">&#183;</span>
       <span id="last-synced">Synced: --</span>
       <select id="count-mode" aria-label="Count mode">
         <option value="bytes">Bytes</option>
